(fix) O3-5646: Remove extra padding from NumericObs cell variant in tablet mode

--- a/packages/framework/esm-styleguide/src/numeric-observation/numeric-observation.module.scss
+++ b/packages/framework/esm-styleguide/src/numeric-observation/numeric-observation.module.scss
@@ -36,8 +36,7 @@
   height: 100%;
   padding-top: 0.4375rem;
   padding-bottom: 0.375rem;
-  padding-left: layout.$spacing-05;
-  padding-right: layout.$spacing-05;
+  padding-inline: 0;
 }
 
 .cell.critically-high,
